--- a/app/src/main/res/layout/product_rv_item.xml
+++ b/app/src/main/res/layout/product_rv_item.xml
@@ -15,10 +15,10 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/productImage"
             android:layout_width="100dp"
             android:layout_height="130dp"
-            android:src="@drawable/ic_baseline_smartphone_24">
-        </ImageView>
+            android:src="@drawable/ic_baseline_smartphone_24"></ImageView>
 
 
         <LinearLayout
