--- a/app/src/main/res/layout/product_detailed_view.xml
+++ b/app/src/main/res/layout/product_detailed_view.xml
@@ -129,4 +129,15 @@
 
     </TextView>
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="50dp" />
+
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="ADD TO CARD">
+    </Button>
+
 </LinearLayout>
