--- a/app/src/main/res/layout/order_card.xml
+++ b/app/src/main/res/layout/order_card.xml
@@ -2,12 +2,12 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     android:elevation="8dp"
     app:cardCornerRadius="8dp">
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,7 +29,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/idTVProductName"
+                android:id="@+id/orderProductName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="8dp"
@@ -38,7 +38,7 @@
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/idTVProductPrice"
+                android:id="@+id/orderProductPrice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/idTVProductName"
@@ -68,7 +68,7 @@
 
 
                 <TextView
-                    android:id="@+id/quantity"
+                    android:id="@+id/orderQuantity"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="1"
@@ -93,11 +93,11 @@
 
 
                 <ImageView
-                    android:id="@+id/addToCart"
+                    android:id="@+id/removeFromCart"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_marginStart="120dp"
-                    android:src="@drawable/ic_baseline_shopping_cart_24">
+                    android:src="@drawable/ic_baseline_close_24">
 
                 </ImageView>
 
