--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,6 +7,11 @@
         android:title="@string/title_home" />
 
     <item
+        android:id="@+id/navigation_order"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="Order" />
+
+    <item
         android:id="@+id/navigation_dashboard"
         android:icon="@drawable/ic_baseline_person_24"
         android:title="User" />
