--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,6 +12,12 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
+        android:id="@+id/navigation_order"
+        android:name="com.example.matchashop.SignInLogin.ui.order.OrderFragment"
+        android:label="@string/title_order"
+        tools:layout="@layout/fragment_order" />
+
+    <fragment
         android:id="@+id/navigation_dashboard"
         android:name="com.example.matchashop.SignInLogin.ui.dashboard.DashboardFragment"
         android:label="@string/title_dashboard"
