--- a/app/src/main/res/layout/product_order_item.xml
+++ b/app/src/main/res/layout/product_order_item.xml
@@ -68,6 +68,7 @@
 
 
                 <TextView
+                    android:id="@+id/idOrderProductQuantity"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="1"
