--- a/app/src/main/res/layout/order_card.xml
+++ b/app/src/main/res/layout/order_card.xml
@@ -91,15 +91,12 @@
 
                 </ImageView>
 
-
-                <ImageView
+                <Button
                     android:id="@+id/removeFromCart"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginStart="120dp"
-                    android:src="@drawable/ic_baseline_close_24">
-
-                </ImageView>
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Remove" />
 
 
             </LinearLayout>
