--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,8 +8,8 @@
 
     <item
         android:id="@+id/navigation_order"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="Order" />
+        android:icon="@drawable/ic_baseline_shopping_bag_24"
+        android:title="Card" />
 
     <item
         android:id="@+id/navigation_dashboard"
