--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignInLogin.ui.dashboard.DashboardFragment">
+    tools:context=".MainFragments.dashboard.DashboardFragment">
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="wrap_content"
