--- a/app/src/main/res/layout/ordered_item_one.xml
+++ b/app/src/main/res/layout/ordered_item_one.xml
@@ -15,7 +15,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/productImage"
+            android:id="@+id/orderedProductImage"
             android:layout_width="100dp"
             android:layout_height="130dp"
             android:src="@drawable/ic_baseline_smartphone_24">
