--- a/app/src/main/res/layout/add_product.xml
+++ b/app/src/main/res/layout/add_product.xml
@@ -18,7 +18,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@tools:sample/avatars"
+        />
 
     <EditText
         android:id="@+id/addName"
@@ -72,8 +73,7 @@
         android:minHeight="48dp"
         app:layout_constraintBottom_toTopOf="@+id/submitProduct"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="@string/price"/>
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <Button
         android:id="@+id/submitProduct"
