--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -118,6 +118,12 @@
                 android:text="setting" />
 
         </LinearLayout>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="20dp" />
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -128,6 +134,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Add product" />
+        </LinearLayout>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="20dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/addCoupon"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Add coupon" />
         </LinearLayout>
 
     </LinearLayout>
