--- a/app/src/main/res/layout/add_coupon.xml
+++ b/app/src/main/res/layout/add_coupon.xml
@@ -11,14 +11,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="101dp"
+        android:layout_marginTop="200dp"
         android:layout_marginEnd="101dp"
-        android:layout_marginBottom="20dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        app:layout_constraintBottom_toTopOf="@+id/DiscountPercentage"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/DiscountPercentage"
@@ -26,11 +26,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="97dp"
         android:layout_marginEnd="104dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="number"
         android:minHeight="48dp"
-        app:layout_constraintBottom_toBottomOf="@id/DiscountName"
+        app:layout_constraintTop_toBottomOf="@id/DiscountCode"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="101dp"
         android:layout_marginEnd="101dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="text"
         android:minHeight="48dp"
