--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -152,6 +152,23 @@
                 android:text="Add coupon" />
         </LinearLayout>
 
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="20dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/deleteCoupon"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Delete Coupon" />
+        </LinearLayout>
+
     </LinearLayout>
 
 
