--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -75,36 +75,13 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+
             <Button
                 android:id="@+id/myOrders"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:text="ORDERS"
+                android:text="ORDER HISTORY"
                 android:textSize="16dp" />
-
-
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="20dp" />
-
-            <Button
-                android:id="@+id/favorite"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="FAVORITE PRODUCTS"
-                android:textSize="16dp"/>
-
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="20dp" />
-
-            <Button
-                android:id="@+id/currentOrder"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="16dp"
-                android:text="SHOPPING MONEY" />
 
             <Space
                 android:layout_width="match_parent"
