--- a/app/src/main/res/layout/product_rv_item.xml
+++ b/app/src/main/res/layout/product_rv_item.xml
@@ -9,7 +9,8 @@
     app:cardCornerRadius="8dp">
 
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/fullCardLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -24,9 +25,12 @@
 
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:id="@+id/productLayout"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            app:layout_constraintStart_toEndOf="@id/productImage"
+            app:layout_constraintTop_toTopOf="@+id/productImage">
 
             <TextView
                 android:id="@+id/idTVProductName"
@@ -92,21 +96,26 @@
                 </ImageView>
 
 
-                <ImageView
-                    android:id="@+id/addToCart"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginStart="120dp"
-                    android:src="@drawable/ic_baseline_shopping_cart_24">
-
-                </ImageView>
 
 
             </LinearLayout>
 
 
         </LinearLayout>
+        <ImageView
+            android:id="@+id/addToCart"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="120dp"
+            android:layout_marginEnd="20dp"
+            android:src="@drawable/ic_baseline_shopping_cart_24"
+            app:layout_constraintBottom_toBottomOf="@+id/productLayout"
+            app:layout_constraintTop_toTopOf="@+id/productLayout"
+            app:layout_constraintEnd_toEndOf="@+id/fullCardLayout">
 
-    </LinearLayout>
+        </ImageView>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
