--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/navigation_order"
         android:icon="@drawable/ic_baseline_shopping_bag_24"
-        android:title="Card" />
+        android:title="Cart" />
 
     <item
         android:id="@+id/navigation_dashboard"
